maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:54: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if((dir == gauche() && sommeAngle == 4) || (dir == droite() && sommeAngle == -4)) {
    ^